update api time hired